k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-panel-api-service
  namespace: solar-panel-classifier
  labels:
    app: solar-panel-api
spec:
  type: ClusterIP
  selector:
    app: solar-panel-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: solar-panel-streamlit-service
  namespace: solar-panel-classifier
  labels:
    app: solar-panel-streamlit
spec:
  type: ClusterIP
  selector:
    app: solar-panel-streamlit
  ports:
    - name: http
      port: 80
      targetPort: 8501
      protocol: TCP
